<resources>
    <string name="app_name">University Directory</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="user_role_placeholder">Role</string>
    <string name="unit_directory">Danh bạ Đơn vị</string>
    <string name="staff_directory">Danh bạ CBGV</string>
    <string name="student_directory">Danh bạ Sinh viên</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="unit_logo">Unit Logo</string>
    <string name="search_units">Tìm kiếm đơn vị</string>
    <string name="filter">Bộ lọc</string>
    <string name="sort">Sắp xếp</string>
    <string name="search_staff">Tìm kiếm CBGV</string>
    <string name="search_students">Tìm kiếm sinh viên</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="no_account">Không có tài khoản</string>
    <string name="register">Đăng kí</string>
    <string name="back">Trở về</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="register_subtitle">Đăng kí tài khoản</string>
    <string name="full_name">Họ và Tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="have_account">Đã có tài khoản</string>
    <string name="profile_picture">Ảnh đại diện</string>
    <string name="directory_icon">directory_option</string>
    <string name="no_units_found">Không tìm thấy đơn vị</string>
    <string name="unit_name_placeholder">unit_name_placeholder</string>
    <string name="unit_header_image">unit_header_image</string>
    <string name="contact_information">contact_information</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="fax">fax</string>
    <string name="parent_unit">parent_unit</string>
    <string name="child_units">child_units</string>
    <string name="no_child_units">no_child_units</string>
    <string name="staff_access_denied">tu choi truy cap</string>
    <string name="no_staff_found">no_staff_found</string>
    <string name="no_students_found">no_students_found</string>
    <string name="search_student_hint">search_student_hint</string>
    <string name="student_access_restriction">student_access_restriction</string>
    <string name="student_avatar">student_avatar</string>
    <string name="student_name_placeholder">student_name_placeholder</string>
    <string name="student_header_image">\@string/student_header_image</string>
    <string name="student_id">student_id</string>
    <string name="class_name">class_name</string>
</resources>